--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "type": "module",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcryptjs": "^3.0.2",
+    "express": "^5.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
