--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
