hooooly carp biggie

--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "express.io": "^1.1.13",
+    "multer": "^1.4.5-lts.2",
+    "node": "^20.19.2",
+    "sanitize-filename": "^1.6.3",
+    "serve-favicon": "^2.5.0",
+    "sharp": "^0.34.1",
     "socket.io": "^4.8.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
